--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Backgammon</string>
+    <string name="you">You</string>
+    <string name="backgammon">Backgammon</string>
 </resources>
